[project]
name = "fl-smart-healthcare"
version = "1.0.0"
description = "Federated Learning for Smart Healthcare"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "flwr[simulation]>=1.13.0",
    "torch",
    "torchvision",
    "numpy",
    "streamlit",
    "matplotlib",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
